@startuml classDiagram
abstract class IObserver {
    +update(string)
    +get_name()
}

class MessagePublisher{
    +listObservers: list
    +message: string
    +attach()
    +detach()
    +notify()
    +create_message()
}

class DeviceSmartwatch{
    +get_name(): string
    +update(string)
}
class DeviceSmartphone{
    +get_name(): string
    +update(string)
}
class DeviceComputer{
    +get_name(): string
    +update(string)
}


DeviceComputer -- IObserver
DeviceSmartphone -- IObserver
DeviceSmartwatch -- IObserver
MessagePublisher o-- IObserver


@enduml